--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/sky"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_columnSpan="3"
@@ -17,13 +14,14 @@
         android:gravity="center">
 
         <TextView
-            android:layout_column="3"
+            android:maxLength="1"
             android:id="@+id/caseTextView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:gravity="right"/>
+            android:layout_column="3"
+            android:gravity="right"
+            android:textColor="@color/textColor"
+            android:textSize="@dimen/case_text_size" />
 
     </TableRow>
 
@@ -31,15 +29,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center">
+
         <TextView
             android:id="@+id/inputTextView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_span="4"
-            android:textColor="@color/black"
-            android:textSize="40sp"
             android:gravity="right"
-            tools:ignore="HardcodedText,RtlHardcoded" />
+            android:textColor="@color/textColor"
+            android:textSize="@dimen/input_output_text_size" />
     </TableRow>
 
 
@@ -47,15 +45,15 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center">
+
         <TextView
             android:id="@+id/outputTextView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_span="4"
-            android:textColor="@color/black"
-            android:textSize="40sp"
             android:gravity="right"
-            android:layout_marginBottom="20dp"
+            android:textColor="@color/textColor"
+            android:textSize="@dimen/input_output_text_size"
             tools:ignore="HardcodedText,RtlHardcoded" />
     </TableRow>
 
@@ -64,20 +62,17 @@
         android:layout_height="match_parent"
         android:gravity="center">
 
-        <Button
-            android:layout_column="3"
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonClear"
+            style="@style/buttonOperStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_column="3"
             android:text="@string/c"
-            android:textSize="@dimen/button_text_size"
-            android:textStyle="bold"
-            app:backgroundTint="@color/color_bnt_oper"/>
+            android:textStyle="bold" />
 
     </TableRow>
-
-
-
 
 
     <TableRow
@@ -85,172 +80,168 @@
         android:layout_height="match_parent"
         android:gravity="center">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
+
+
             android:id="@+id/button1"
+            style="@style/buttonNumStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/_1"
-            android:textSize="@dimen/button_text_size"
-            android:textStyle="bold"
-            app:backgroundTint="@color/color_btn_nub"
-            android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp" />
+            android:textStyle="bold" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button2"
+            style="@style/buttonNumStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/_2"
-            android:textSize="@dimen/button_text_size"
-            android:textStyle="bold"
-            app:backgroundTint="@color/color_btn_nub"
-            android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp" />
-        <Button
+            android:textStyle="bold" />
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button3"
+            style="@style/buttonNumStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/_3"
-            android:textSize="@dimen/button_text_size"
-            android:textStyle="bold"
-            app:backgroundTint="@color/color_btn_nub"
-            android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp" />
-        <Button
+            android:textStyle="bold" />
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonShare"
+            style="@style/buttonOperStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/share"
-            android:textSize="@dimen/button_text_size"
-            android:textStyle="bold"
-            app:backgroundTint="@color/color_bnt_oper"/>
+            android:textStyle="bold" />
 
     </TableRow>
+
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center">
-        <Button
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button4"
+            style="@style/buttonNumStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/_4"
-            android:textSize="@dimen/button_text_size"
-            android:textStyle="bold"
-            app:backgroundTint="@color/color_btn_nub"
-            android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp" />
-        <Button
+            android:textStyle="bold" />
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button5"
+            style="@style/buttonNumStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/_5"
-            android:textSize="@dimen/button_text_size"
-            android:textStyle="bold"
-            app:backgroundTint="@color/color_btn_nub"
-            android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp" />
-        <Button
+            android:textStyle="bold" />
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button6"
+            style="@style/buttonNumStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/_6"
-            android:textSize="@dimen/button_text_size"
-            android:textStyle="bold"
-            app:backgroundTint="@color/color_btn_nub"
-            android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp" />
-        <Button
+            android:textStyle="bold" />
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonMultiply"
+            style="@style/buttonOperStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/multiply"
-            android:textSize="@dimen/button_text_size"
-            android:textStyle="bold"
-            app:backgroundTint="@color/color_bnt_oper"/>
+            android:textStyle="bold" />
 
     </TableRow>
+
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center">
-        <Button
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button7"
+            style="@style/buttonNumStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/_7"
-            android:textSize="@dimen/button_text_size"
-            android:textStyle="bold"
-            app:backgroundTint="@color/color_btn_nub"
-            android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp" />
-        <Button
+            android:textStyle="bold" />
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button8"
+            style="@style/buttonNumStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/_8"
-            android:textSize="@dimen/button_text_size"
-            android:textStyle="bold"
-            app:backgroundTint="@color/color_btn_nub"
-            android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp" />
-        <Button
+            android:textStyle="bold" />
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button9"
+            style="@style/buttonNumStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/_9"
-            android:textSize="@dimen/button_text_size"
-            android:textStyle="bold"
-            app:backgroundTint="@color/color_btn_nub"
-            android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp" />
-        <Button
+            android:textStyle="bold" />
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonMin"
+            style="@style/buttonOperStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/min"
-            android:textSize="@dimen/button_text_size"
-            android:textStyle="bold"
-            app:backgroundTint="@color/color_bnt_oper"/>
+            android:textStyle="bold" />
 
     </TableRow>
+
     <TableRow
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center">
-        <Button
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/button0"
+            style="@style/buttonNumStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/_0"
-            android:textSize="@dimen/button_text_size"
             android:layout_span="2"
-            android:textStyle="bold"
-            app:backgroundTint="@color/color_btn_nub"
-            android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp" />
+            android:text="@string/_0"
+            android:textStyle="bold" />
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonEquals"
+            style="@style/buttonOperStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/equals"
             android:textSize="@dimen/button_text_size"
-            android:textStyle="bold"
-            app:backgroundTint="@color/color_bnt_oper"
-            android:layout_marginRight="10dp"
-            android:layout_marginEnd="10dp" />
-        <Button
+            android:textStyle="bold" />
+
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/buttonSum"
+            style="@style/buttonOperStyle"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="@string/sum"
-            android:textSize="@dimen/button_text_size"
-            android:textStyle="bold"
-            app:backgroundTint="@color/color_bnt_oper"/>
+            android:textStyle="bold" />
 
 
     </TableRow>
 
+
+    <TableRow
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center">
+        <androidx.appcompat.widget.SwitchCompat
+            android:id="@+id/aSwitch"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/change_theme"
+            />
+
+
+
+    </TableRow>
 
 </TableLayout>
