--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#FFBB86FC</color>
-    <color name="colorPrimaryDark">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
+    <color name="colorPrimary">#908D95</color>
+    <color name="colorPrimaryDark">#474549</color>
+    <color name="purple_700">#252329</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
@@ -12,6 +12,5 @@
     <color name="dimgray">#C0C0C0</color>
     <color name="color_btn_nub">#66686A</color>
     <color name="color_bnt_open">#D39438</color>
-    <color name="textColor">@color/black</color>
-
+    <color name="textColor">@color/colorAccent</color>
 </resources>
