--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="button_text_size">25sp</dimen>
+    <dimen name="button_layout_margin_end">5dp</dimen>
+    <dimen name="case_text_size">20sp</dimen>
+    <dimen name="input_output_text_size">30sp</dimen>
+    <dimen name="output_layout_margin_bottom">20dp</dimen>
+
 </resources>
