Calculator_app_lesson4

--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -15,12 +15,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center">
-        <androidx.appcompat.widget.SwitchCompat
-            android:id="@+id/aSwitch"
-            android:text="@string/change_theme"
+        <Button
+            style="@style/buttonOperStyle"
+            android:text="@string/setting"
+            android:id="@+id/settingBtn"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="match_parent"/>
+
 
 
         <TextView
